--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
 # 엔티티를 기준으로 테이블을 생성하는 규칙을 정의
+# create - 테이블이 새로 만들어 진다
+# update - 테이블이 없으면 만들고 있으며 그냥 사용한다
 spring.jpa.hibernate.ddl-auto=update 
 # 데이터베이스 엔진 종류 설정(추가하면 에러남)
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect 
