댓글 기능 추가중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.application.name=PrjJpa03
+spring.application.name=PrjJpa04
 
 server.port=9090
 # utf-8 encoding
 server.servlet.encoding.force=true
 
-# h2 database web으로 확인
-spring.h2.console.enabled=true
-# src/main/resources/data.sql  초기화 가능 설정(springboot 2.5 부터 비추)
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.database=oracle
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle19cDialect
+
 # JPA 로깅 설정
 # 디버그 레벨로 쿼리 출력
 logging.level.org.hibernate.SQL=DEBUG
@@ -16,23 +15,28 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # 쿼리 줄바꿈하기
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 DB 고정 URL 설정
-# 유니크 URL 생성하지 않기
-spring.datasource.generate-unique-name=false
-# in-memory 고정 URL 설정하기
-#spring.datasource.url=jdbc:h2:mem:testdb
+# 기존 DB 가 없으면 생성 있으면 그냥사용(개발단계 옵션)      - update
+# 새로 생성된다                                              - create
+spring.jpa.hibernate.ddl-auto=create
 
-###---------------------------------------------------------
-# embeded mode c:\dev\projec01\data\testdb.mv.db 생성됨
-#spring.datasource.url=jdbc:h2:./data/testdb
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
-# 엔티티를 기준으로 테이블을 생성하는 규칙을 정의
-# create - 테이블이 새로 만들어 진다
-# update - 테이블이 없으면 만들고 있으며 그냥 사용한다
-spring.jpa.hibernate.ddl-auto=update 
-# 데이터베이스 엔진 종류 설정(추가하면 에러남)
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect 
+# create 할때 미리 초기데이터를 입력 data.sql 초기화 
+# entity 가  생성될때 자동으로 불러오는 sql문 저장
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# datasource 설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=spring
+spring.datasource.password=1234 
+## h2 database web으로 확인
+## 프로젝트와 h2 db 를 연결 : http://localhost:9090/h2-console
+#spring.h2.console.enabled=true
+
+
+## H2 DB 고정 URL 설정
+## 유니크 URL 생성하지 않기
+#spring.datasource.generate-unique-name=false
+## 고정 URL 설정하기
+#spring.datasource.url=jdbc:h2:mem:testdb
+##spring.datasource.url=jdbc:h2:/testdb
