로그인 체크중

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,16 @@ dependencies {
 	
     //sql로그
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    
+    //thymeleaf 추가
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    
+    // 1. spring security 추가
+    implementation 'org.springframework.boot:spring-boot-starter-security'    
+    // 2. 타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    // 3. 스프링 시큐리티를 테스트하기 위한 의존성 추가
+    implementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
