--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=PrjJpa04
+spring.application.name=PrjJpa05
 
 server.port=9090
 # utf-8 encoding
@@ -32,6 +32,9 @@ spring.datasource.password=1234
 ## h2 database web으로 확인
 ## 프로젝트와 h2 db 를 연결 : http://localhost:9090/h2-console
 #spring.h2.console.enabled=true
+
+spring.thymeleaf.prefix=classpath:/templates/member/
+spring.thymeleaf.suffix=.html
 
 
 ## H2 DB 고정 URL 설정
